# llm-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/llm_api/api/: routes.py
src/llm_api/app/: main.py
src/llm_api/exceptions/: llm_exceptions.py
src/llm_api/logs/: logging_config.py  middleware.py
src/llm_api/schemas/: models.py
src/llm_api/services/: llm_service.py
tests/integration_tests/: test_api_exceptions.py  test_api_routes.py  test_api_with_service_mock.py
tests/unit_tests/: test_exception_handlers.py  test_llm_service.py  test_models.py
